Fix Usability Tasks
* Add symbol disappears from Characteristic after deleting Trait
* Explanations for the symbols (diagram resize) are missing*
* Show a message if validation fails
* Show "select language" only if the language is not selected
* Unique format icon
* Change the message at smart connection "property"-"operation"
* The description of several elements does not fit on the left panel
* Better highlight the selected diagram elements in ttl files
* Unit should be removed from search
* curie dataType is not displayed in characteristic
* Data of characteristic instances are not always displayed after saving

--- a/core/apps/ame/src/app/components/editor-canvas/sidebar/sidebar-namespace-elements/namespace-filter/namespace-filter.component.scss
+++ b/core/apps/ame/src/app/components/editor-canvas/sidebar/sidebar-namespace-elements/namespace-filter/namespace-filter.component.scss
@@ -26,10 +26,13 @@
     color: var(--ame-font);
     cursor: pointer;
     user-select: none;
+    opacity: 60%;
     border: solid 1px transparent;
   }
 
   .selected {
+    opacity: 100%;
+    border-width: 2px;
     border-color: var(--ame-font);
   }
 }
